--- a/app/globals.css
+++ b/app/globals.css
@@ -24,10 +24,11 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
+    --background: 0 0% 5%;
+    --foreground: 0 0% 10%;
+    --card: 0 0% 25%;
     --card-foreground: 0 0% 3.9%;
+    --skeleton: 0 0% 40%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
     --primary: 217 100% 65%;
